<?xml version="1.0"?>
<package format="2">
  <name>box_launch</name>
  <version>1.0.0</version>
  <description>RSL's box launch package.</description>
  <license>Proprietary</license>
  <maintainer email="jonfrey@ethz.ch">Vassilios Tsounis</maintainer>
  <author email="jonfrey@ethz.ch">Vassilios Tsounis</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>bringup_alphasense</depend>
  <depend>bringup_hdr</depend>
  <depend>bringup_hesai</depend>
  <depend>bringup_livox</depend>
  <depend>fkie_multimaster</depend>
</package>