<?xml version="1.0"?>
<package format="2">
  <name>box_launch</name>
  <version>1.0.0</version>
  <description>RSL's box launch package.</description>
  <license>Proprietary</license>
  <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
  <author email="jonfrey@ethz.ch">Jonas Frey</author>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>bringup_alphasense</depend>
  <depend>bringup_hesai</depend>
  <depend>bringup_hdr</depend>
  <depend>bringup_imu</depend>
  <depend>bringup_livox</depend>
  <depend>bringup_totalstation</depend>
  <depend>bringup_gps</depend>
  <depend>bringup_adis16475</depend>
  <exec_depend>fkie_multimaster_msgs</exec_depend>
  <exec_depend>fkie_master_discovery</exec_depend>
  <exec_depend>fkie_master_sync</exec_depend>
  <exec_depend>fkie_node_manager</exec_depend>
  <exec_depend>fkie_node_manager_daemon</exec_depend>
  <depend>box_recording</depend>
  <depend>box_rviz</depend>
  <depend>box_health</depend>
  <depend>box_model</depend>
</package>