<?xml version="1.0"?>
<package format="2">
  <name>bringup_adis16475</name>
  <version>0.0.0</version>
  <description>The bringup_adis16475 package for the linux driver</description>
  <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
  <license>Proprietary</license>
  <depend>adi_imu_driver_ros</depend>
  <export>
  </export>
</package>