<?xml version="1.0"?>
<package format="2">
  <name>bringup_ap20</name>
  <version>0.0.0</version>
  <description>The bringup_AP20 package</description>
  <maintainer email="bkrumme@student.ethz.ch">Benjamin Krummenacher</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>ap20_driver_ros</depend>
  <export>
  </export>
</package>