<?xml version="1.0"?>
<package format="2">
  <name>bringup_fkie</name>
  <version>1.0.0</version>
  <description>RSL's bringup fkie package.</description>
  <license>Proprietary</license>
  <maintainer email="bkrumme@ethz.ch">Benjamin Krummenacher</maintainer>
  <author email="bkrumme@ethz.ch">Benjamin Krummenacher</author>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>fkie_multimaster_msgs</exec_depend>
  <exec_depend>fkie_master_discovery</exec_depend>
  <exec_depend>fkie_master_sync</exec_depend>
  <exec_depend>fkie_node_manager</exec_depend>
  <exec_depend>fkie_node_manager_daemon</exec_depend>
</package>