<?xml version="1.0"?>
<package format="2">
  <name>bringup_hesai</name>
  <version>0.0.0</version>
  <description>The bringup_hesai package</description>
  <maintainer email="bkrumme@ethz.ch">Benjamin krummenacher</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>hesai_ros_driver</depend>
  <depend>box_power_control</depend>
  <export>
  </export>
</package>