<?xml version="1.0"?>
<package format="2">
  <name>bringup_livox</name>
  <version>0.0.0</version>
  <description>The bringup_livox package</description>
  <maintainer email="bkrumme@ethz.ch">Benjamin Krummenacher</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>livox_sdk</depend>
  <depend>livox_ros_driver2</depend>
  <export>
  </export>
</package>