<?xml version="1.0"?>
<package format="2">
  <name>bringup_open3d_slam</name>
  <version>0.0.0</version>
  <description>The bringup_open3d_slam package works out of the box!</description>
  <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
  <license>Proprietary</license>
  <depend>open3d_slam_ros</depend>
  <export>
  </export>
</package>