<?xml version="1.0"?>
<package format="2">
  <name>bringup_pi</name>
  <version>1.0.0</version>
  <description>RSL's bringup pi package.</description>
  <license>Proprietary</license>
  <maintainer email="bkrumme@ethz.ch">Benjamin Krummenacher</maintainer>
  <author email="bkrumme@ethz.ch">Benjamin Krummenacher</author>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bringup_fkie</exec_depend>
  <depend>box_health</depend>
  <depend>bringup_adis16475</depend>
</package>