<?xml version="1.0"?>
<package format="2">
  <name>bringup_pointcloud_filter</name>
  <version>0.0.0</version>
  <description>The bringup_pointcloud_filter package</description>
  <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
    <depend>pcl_ros</depend>
  <export>
  </export>
</package>