<?xml version="1.0"?>
<package format="2">
  <name>bringup_stim320</name>
  <version>0.0.0</version>
  <description>The bringup_stim320 driver</description>
  <maintainer email="tutuna@ethz.ch">Turcan Tuna</maintainer>
  <license>Proprietary</license>
  <depend>stim320_driver</depend>
  <export>
  </export>
</package>