<?xml version="1.0"?>
<package format="2">
  <name>bringup_wavemap</name>
  <version>0.0.0</version>
  <description>The bringup_wavemap package</description>
  <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>wavemap_all</depend>
  <export>
  </export>
</package>