<?xml version="1.0"?>
<package format="2">
  <name>bringup_zed2i</name>
  <version>0.0.0</version>
  <description>The bringup_hdr package</description>
  <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>zed_wrapper</depend>
  <export>
  </export>
</package>