<?xml version="1.0"?>
<package format="2">
  <name>bringup_zed2i_visualization</name>
  <version>0.0.0</version>
  <description>The bringup_zed2i_visualization package</description>
  <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>zed_wrapper</depend>
  <export>
  </export>
</package>