<?xml version="1.0"?>
<package format="2">
  <name>box_calibration</name>
  <version>0.0.0</version>
  <description>The box_calibration package</description>
  <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <export>
  </export>
</package>